[package]
name = "bau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "3"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "libbau"
path = "src/lib.rs"

[[bin]]
name = "bau_mem"
path = "src/bau_mem.rs"